2011-11-25 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: gtk-doc and gnome-doc-utils are no more mandatory packages.

	* Makefile.am:
	No more try to rebuild manuals when making distcheck.
	Move gnome-doc-utils.make and gtk-doc.make to MAINTAINERCLEANFILES target.

	* run-autogen.sh:
	Rename 'autogen_target' variable to 'target'.
	Remove distcheck target as doc is enough to build manuals.

	* run-distcheck.sh: Update to new 'target' variable and 'doc' target.

	* docs/reference/Makefile.am:
	gtk-doc is no more a mandatory package.
	Requires gtk-doc 1.15 to take advantage of new source option.

	* docs/reference/nautilus-actions-docs.xml: Bump copyright year.

2011-11-21 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nautilus-actions-config-tool.ui:
	Remove empty children from GtkAssistant container.

	* src/nact/nact-assistant-import.c:
	Adapt to the new way Gtk+ 3.2 builds the assistant.

	* src/nact/base-application.c (appli_initialize_gtk): Fix a typo.

	* src/core/na-gtk-utils.c (na_gtk_utils_dump_children):
	Increment the level of the first child of the hierarchy.

	* run-autogen.sh: Be able to run from another directory.

2011-11-16 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_dump_children): New function.

	* src/core/na-gtk-utils.c:
	* src/core/na-gtk-utils.h (na_gtk_utils_dump_children): New function.

	* docs/nact/C/nact-conditions.xml:
	* docs/nact/C/nact-edit.xml:
	* docs/nact/C/nact-execution.xml:
	* docs/nact/C/nact-profiles.xml:
	* docs/nact/C/nact-sorting.xml:
	* src/nact/nact-assistant-import.c:
	Fix with advices of Christian Kirbach.
	Fix #660399, reported by Christian Kirbach.

2011-11-15 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-export-format.c:
	* src/nact/nact-main-toolbar.c:
	Get ride of deprecated GtkHBox and GtkVBox.

2011-11-05 Pierre Wieser <pwieser@trychlos.org>

	* run-autogen.sh, run-distcheck.sh: Defines a special 'distcheck' mode.
